--- a/style.css
+++ b/style.css
@@ -8,8 +8,33 @@ Template:       Discovery
 Version:        0.1.0
 */
 @import url("../discovery/style.css");
-
+.header-image a img{
+	width: 188px;
+	margin-top: 3px;
+}
 /*Colors treatment*/
+.abg-home article{
+	padding-bottom: 0;
+	margin-bottom: 0;
+}
+.abg-home article h2{
+	font-family: Georgia;
+	font-style: italic;
+}
+.main-navigation ul ul li a{
+	background-color: #5f5f5f!important;
+}
+.abg-news li{
+	border-bottom: 1px solid #472a0a;
+}
+.footer_container{
+	background-color: #FFF;
+	color: #747474;
+	padding-top: 0;
+}
+.site-info{
+	background-color: #5f5f5f;
+}
 .entry-header{
 	background-color: #472a0a;
 }
