--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@ Template:       Discovery
 Version:        0.1.0
 */
 @import url("../discovery/style.css");
+
 .header-image a img{
 	width: 188px;
 	margin-top: 3px;
 }
-/*Colors treatment*/
 .abg-home article{
 	padding-bottom: 0;
 	margin-bottom: 0;
@@ -32,6 +32,50 @@ Version:        0.1.0
 	color: #747474;
 	padding-top: 0;
 }
+.abg-col-1-2{
+	width: 50%;
+}
+.abg-col-2-3 {
+  width: 66.66%;
+}
+[class*='abg-col-'] img{
+  width: 100%;
+}
+.abg-col-1-3 {
+  width: 33.33%;
+}
+.abg-row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+[class*='abg-col-'] {
+  float: left;
+}
+[class*='abg-col-']:last-of-type {
+  padding-right: 0;
+}
+.Flexible-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+.Flexible-container iframe,   
+.Flexible-container object,  
+.Flexible-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 200px;
+    min-width: 200px;
+}
+/*Colors treatment*/
 .site-info{
 	background-color: #5f5f5f;
 }
