--- a/style.css
+++ b/style.css
@@ -9,6 +9,20 @@ Version:        0.1.0
 */
 @import url("../discovery/style.css");
 
+.romana-menu-item h1{
+	margin-top: 0;
+	line-height: 20px;
+}
+/*Pizzas*/
+.romana-mini-prix:before {
+	content: "mini: ";
+	font-size: 0.7em;
+}
+.romana-prix{
+	display: inline-block;
+	width: 30px;
+}
+/****/
 .header-image a img{
 	width: 188px;
 	margin-top: 3px;
@@ -37,9 +51,6 @@ Version:        0.1.0
 }
 .abg-col-2-3 {
   width: 66.66%;
-}
-[class*='abg-col-'] img{
-  width: 100%;
 }
 .abg-col-1-3 {
   width: 33.33%;
@@ -74,6 +85,30 @@ Version:        0.1.0
     height: 100%;
     min-height: 200px;
     min-width: 200px;
+}
+@media only screen and (max-width: 800px) {
+	.abg-col-1-2,.abg-col-2-3,.abg-col-1-3{
+		width: 100%;
+	}
+	.romana-menu-item-description p{
+		margin-bottom: 5px;
+	}
+	.romana-menu-item h1{
+		line-height: 40px;
+		margin-bottom: 5px;
+	}
+	.romana-menu-item-price{
+		margin-bottom: 3px;
+	}
+	.romana-menu-item-description,.romana-menu-item-price{
+		padding-left: 6px;
+		margin-left: 0.5em;
+	}
+	#primary{
+		padding-bottom: 10px;
+		margin-bottom: 10px;
+		border-bottom: 7px #747474 solid;
+	}
 }
 /*Colors treatment*/
 .site-info{
