--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@ Template:       Discovery
 Version:        0.1.0
 */
 @import url("../discovery/style.css");
-
+#menu-items{
+	margin-top: 20px;
+}
 .romana-menu-item h1{
 	margin-top: 0;
 	line-height: 20px;
