--- a/style.css
+++ b/style.css
@@ -11,11 +11,27 @@ Version:        0.1.0
 #menu-items{
 	margin-top: 20px;
 }
+/* Menu items */
+.romana-menu-item{
+	margin-top: 20px;
+}
 .romana-menu-item h1{
+	margin-top: 0;
+	font-size: 1.1em;
+	font-style: italic;
+	line-height: 20px;
+}
+.romana-menu-item .romana-prix{
+	margin-top: 0;
+	line-height: 20px;
+	font-size: 1.2em;
+	padding-left: 30px;
+}
+/*Pizzas*/
+.romana-pizza-item h1{
 	margin-top: 0;
 	line-height: 20px;
 }
-/*Pizzas*/
 .romana-mini-prix:before {
 	content: "mini: ";
 	font-size: 0.7em;
@@ -92,17 +108,17 @@ Version:        0.1.0
 	.abg-col-1-2,.abg-col-2-3,.abg-col-1-3{
 		width: 100%;
 	}
-	.romana-menu-item-description p{
+	.romana-pizza-item-description p{
 		margin-bottom: 5px;
 	}
-	.romana-menu-item h1{
+	.romana-pizza-item h1{
 		line-height: 40px;
 		margin-bottom: 5px;
 	}
-	.romana-menu-item-price{
+	.romana-pizza-item-price{
 		margin-bottom: 3px;
 	}
-	.romana-menu-item-description,.romana-menu-item-price{
+	.romana-pizza-item-description,.romana-pizza-item-price{
 		padding-left: 6px;
 		margin-left: 0.5em;
 	}
