--- a/style.css
+++ b/style.css
@@ -153,6 +153,15 @@ Version:        0.1.0
 		border-bottom: 7px #747474 solid;
 	}
 }
+@media only screen and (min-width: 800px) {
+	.site-info .vcard{
+		display: inline-block;
+	}
+	.site-info a{
+		float: right;
+		margin-right: 10px;
+	}
+}
 /*Colors treatment*/
 .site-info{
 	background-color: #5f5f5f;
